--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>vhogii.mafe</title>
 </head>
 <body>
-    <H1>Canadabeuty</H1>
+    <H1>Canadabeauty</H1>
     <img id="ima1" src="Canada.jpeg">
 </body>
 </html>
 <h1>canadalife</h1>
+
+<h2> Nova Escácia</h2>
+    <img  id="ima2" src="novascotia.png"
