--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
 <h1>canadalife</h1>
 
 <h2> Nova Escácia</h2>
-    <img  id="ima2" src="novascotia.png"
+<h3>Truro</h3>
+    <img  id="ima2" src="images.jpeg"
